code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_4.wast
(assert_invalid
  (module (func $label-index (unreachable) (br 1)))
  "unknown label"
)